# ggsci-rs

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
crates/ggsci/: Cargo.toml  README.md
crates/ggsci-ggsql/: Cargo.toml  README.md
crates/ggsci-ggsql/examples/: continuous.rs  discrete.rs
crates/ggsci-ggsql/src/: lib.rs
crates/ggsci-ggsql/tests/: integration.rs
crates/ggsci-ratatui/: Cargo.toml  README.md
crates/ggsci-ratatui/examples/: swatch.rs
crates/ggsci-ratatui/examples/palette-gallery/: README.md  app.rs  catalog.rs  main.rs  palette_card.rs  ui.rs
crates/ggsci-ratatui/examples/vhs/: palette-gallery.tape
crates/ggsci-ratatui/src/: lib.rs
crates/ggsci/src/: color.rs  continuous.rs  error.rs  gephi.rs  iterm.rs  lib.rs  normalize.rs  palette.rs
crates/ggsci/tests/: continuous.rs  gephi.rs  iterm.rs
tools/: generate-continuous-fixtures.R  generate-gephi-palettes.R  generate-iterm-palettes.R  generate-palettes.R
xtask/: Cargo.toml
xtask/src/: main.rs
