[package]
name = "ggsci-ggsql"
version = "0.6.1"
edition = "2021"
rust-version = "1.86"
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Use ggsci color palettes in ggsql visualizations"
readme = "README.md"
keywords = ["ggsql", "sql", "colors", "palettes", "visualization"]
categories = ["visualization"]
include = ["Cargo.toml", "README.md", "src/**/*.rs", "examples/**/*.rs"]

[package.metadata.docs.rs]
cargo-args = ["--config=env.GGSQL_SKIP_GENERATE=\"1\""]

[dependencies]
ggsci = { version = "0.6.1", path = "../ggsci" }
ggsql = { version = "0.4.1", default-features = false }

[lints]
workspace = true
